src/path/log/build_2022-12-19_10-58-30/path/stdout_stderr.log
running egg_info
creating build/path/path.egg-info
writing build/path/path.egg-info/PKG-INFO
writing dependency_links to build/path/path.egg-info/dependency_links.txt
writing entry points to build/path/path.egg-info/entry_points.txt
writing requirements to build/path/path.egg-info/requires.txt
writing top-level names to build/path/path.egg-info/top_level.txt
writing manifest file 'build/path/path.egg-info/SOURCES.txt'
reading manifest file 'build/path/path.egg-info/SOURCES.txt'
writing manifest file 'build/path/path.egg-info/SOURCES.txt'
running build
running build_py
creating /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build
creating /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib
creating /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib/path
copying path/__init__.py -> /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib/path
copying path/waypoints.py -> /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib/path
running install
running install_lib
creating /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path
copying /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib/path/__init__.py -> /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path
copying /home/jjaffe27/dev_f1tenth_ws/src/path/build/path/build/lib/path/waypoints.py -> /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path
byte-compiling /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path/__init__.py to __init__.cpython-38.pyc
  File "/home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path/waypoints.py", line 26
    print data.twist.twist.linear.x
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(data.twist.twist.linear.x)?

byte-compiling /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path/waypoints.py to waypoints.cpython-38.pyc
running install_data
creating /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/share/ament_index
creating /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/share/ament_index/resource_index
creating /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/share/ament_index/resource_index/packages
copying resource/path -> /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/share/ament_index/resource_index/packages
copying package.xml -> /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/share/path
running install_egg_info
Copying build/path/path.egg-info to /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path-0.0.0-py3.8.egg-info
running install_scripts
Installing waypoints script to /home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/path
writing list of installed files to '/home/jjaffe27/dev_f1tenth_ws/src/path/build/path/install.log'
